@@ -567,4 +567,43 @@ echo "#### End of Configure created section ####">> Makefile.config
 # Now (finish) creating the makefiles
 cat Makefile.config >> Makefile
 cat "$makefile_tmpl" >> Makefile
+awk >>Makefile <$tmpfile \
+   '($3 ~ /modules\//) { printf "%s: modules/last-built ; @echo linking %s\n\n", $3, $3}'
 cat Makefile.config ../support/Makefile.tmpl > ../support/Makefile
+
+cat << EOF > modules/Makefile
+# 
+# Simple Makefile for modules in src/modules.
+# Generated by src/Configure according to rules in src/Configuration;
+# hand-edit at your own risk!
+# 
+
+SHELL = /bin/sh
+EOF
+
+if [ "$RULE_WANTHSREGEX" = "yes" ]; then
+    INCLUDES2="-I../../regex"
+fi
+
+echo "INCLUDES2=$INCLUDES2">> modules/Makefile
+echo "MOD_CFLAGS=\$(INCLUDES2) \$(AUX_CFLAGS)">> modules/Makefile
+
+awk >> modules/Makefile < $tmpfile '\
+   BEGIN {printf "MODULES="} \
+   ($3 ~ /modules\//) {split ($3, pp, "/"); printf "%s ", pp[2]} \
+   END {printf "\n"}'
+cat << EOF >> modules/Makefile
+
+default:
+	(for dir in \$(MODULES); do \\
+		cd \$\$dir; \\
+		\$(MAKE) CC=\$(CC) AUX_CFLAGS='\$(MOD_CFLAGS)' RANLIB='\$(RANLIB)'; \\
+		cd ..; \\
+	done)
+
+clean:	
+	(for dir in \$(MODULES); do \\
+		cd \$\$dir; \$(MAKE) clean; \\
+		cd ..; \\
+	done)
+EOF
