@@ -1,5 +1,8 @@
 Changes with Apache 1.2b8
 
+  *) Improved generation of modules/Makefile to be more generic for
+     new module directories. [Ken Coar and Chuck Murcko]
+
   *) Fixed problem with vhost error log not being set prior to
      initializing virtual hosts. [Dean Gaudet]
 
